--- a/themes/mc-server-theme-amp/layouts/partials/structure/head.html
+++ b/themes/mc-server-theme-amp/layouts/partials/structure/head.html
@@ -14,7 +14,10 @@
 
     <link rel="canonical" href="{{ .Permalink }}">
 
-    <link rel="icon" href="/favicon.png" type="image/png" sizes="144x144">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,16 +39,6 @@
       <link rel="preconnect" href="https://cdn.snipcart.com">
       <link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.2.1/default/snipcart.css" />
     {{ end }}
-
-
-    <!-- Exit Modal -->
-    <meta 
-      name="amp-script-src"
-      content="
-        sha384-8a-AdC5CvXn28DPxX5Rt1EKCyTUfrvS-CcrRyWIxhF5No8r1NxzNgZjIVNSAytyG
-      "
-    />
-
 </head>
 
 <body>
