Fix margin issue in footer

--- a/themes/mc-server-theme-amp/layouts/partials/navigation/footer.html
+++ b/themes/mc-server-theme-amp/layouts/partials/navigation/footer.html
@@ -23,7 +23,7 @@
     <div class="column-12 column-lg-6">
         <div class="display-flex justify-content-center justify-content-lg-flex-end margin-top-32">
         {{ range site.Data.footer.columns }}
-          <div class="margin-left-32">
+          <div class="margin-x-16">
             <h4 class="font-weight-bold">{{ .title }}</h4>
             <ul class="margin-y-16">
               {{ range .items }}
