--- a/themes/mc-server-theme-amp/layouts/partials/section/plans-premade-table-vps.html
+++ b/themes/mc-server-theme-amp/layouts/partials/section/plans-premade-table-vps.html
@@ -10,7 +10,7 @@
             <th class="text-align-left vertical-align-middle">Server Quota</th>
             <th class="text-align-left vertical-align-middle">Bungee Quota</th>
             <th class="text-align-left vertical-align-middle">Price</th>
-            <th class="text-align-left vertical-align-middle">Buy</th>
+            <th class="text-align-center vertical-align-middle">Buy</th>
           </tr>
         </thead>
         <tbody>
