--- a/themes/mc-server-theme-amp/assets/scss/_utilities.scss
+++ b/themes/mc-server-theme-amp/assets/scss/_utilities.scss
@@ -46,9 +46,11 @@
 
 .flex-grow-1 { flex-grow: 1; }
 
+.position-relative { position: relative; }
 .position-absolute { position: absolute; }
 .right-0 { right: 0; }
 
+.opacity-0 { opacity: 0; }
 
 .margin-16 { margin: 16px; }
 
