--- a/themes/mc-server-theme-amp/assets/scss/sections/_hero.scss
+++ b/themes/mc-server-theme-amp/assets/scss/sections/_hero.scss
@@ -1,11 +1,9 @@
 .section-hero-title {
   display: inline-block;
   position: relative;
-  min-height: 350px;
   max-width: 100%;
+  padding-bottom: 64px;
 
-  // @media (min-width: 768px) { .container-md, .container-sm, .container { max-width: 720px; } }
-  // @media (min-width: 992px) { 
   .section-hero-text {
     padding-bottom: 50px;
 
