--- a/themes/mc-server-theme-amp/layouts/partials/section/plans-premade-table-general.html
+++ b/themes/mc-server-theme-amp/layouts/partials/section/plans-premade-table-general.html
@@ -1,5 +1,6 @@
 <section class="section-table padding-y-64">
   <div class="container">
+    <h2 class="font-size-24 font-weight-bold padding-bottom-32">MineCraft Plans</h2>
     <div class="row padding-bottom-32 overflow-x-auto">
       <table>
         <thead class="font-weight-semi-bold background-color-licorice border-radius-8">
