--- a/themes/mc-server-theme-amp/layouts/partials/section/plans-premade-table-vps.html
+++ b/themes/mc-server-theme-amp/layouts/partials/section/plans-premade-table-vps.html
@@ -1,5 +1,6 @@
 <section class="section-table padding-y-64">
   <div class="container">
+    <h2 class="font-size-24 font-weight-bold padding-bottom-32">VPS Plans</h2>
     <div class="row padding-bottom-32 overflow-x-auto">
       <table>
         <thead class="font-weight-semi-bold background-color-licorice border-radius-8">
@@ -7,8 +8,8 @@
             <th class="text-align-left vertical-align-middle">Plans</th>
             <th class="text-align-left vertical-align-middle">RAM</th>
             <th class="text-align-left vertical-align-middle">Storage</th>
-            <th class="text-align-left vertical-align-middle">Server Quota</th>
-            <th class="text-align-left vertical-align-middle">Bungee Quota</th>
+            <th class="text-align-left vertical-align-middle">Processor</th>
+            <th class="text-align-left vertical-align-middle">Thread Count</th>
             <th class="text-align-left vertical-align-middle">Price</th>
             <th class="text-align-center vertical-align-middle">Buy</th>
           </tr>
