--- a/themes/mc-server-theme-amp/layouts/faqs/single.html
+++ b/themes/mc-server-theme-amp/layouts/faqs/single.html
@@ -8,7 +8,7 @@
     <div class="row padding-top-64 justify-content-space-around">
       <div class="column-12 padding-y-32">
         <h2 class="font-size-25 font-weight-bold">{{ .Title }}</h2>
-        <div class="padding-y-32">
+        <div class="markdown-body padding-y-32">
           {{ .Content }}
         </div>
         <div class="color-aqua">
