Update link color in FAQs.

--- a/themes/mc-server-theme-amp/assets/scss/sections/_faqs.scss
+++ b/themes/mc-server-theme-amp/assets/scss/sections/_faqs.scss
@@ -143,7 +143,7 @@
 }
 
 .markdown-body a {
-  color: #0366d6;
+  color: #00EAFF;
   text-decoration: none;
 }
 
@@ -303,7 +303,7 @@
 .markdown-body :checked+.radio-label {
   position: relative;
   z-index: 1;
-  border-color: #0366d6;
+  border-color: #00EAFF;
 }
 
 .markdown-body .border {
