Update Cores Selection with options to disable the slider and show a message instead.

--- a/themes/mc-server-theme-amp/assets/scss/_utilities.scss
+++ b/themes/mc-server-theme-amp/assets/scss/_utilities.scss
@@ -151,6 +151,7 @@
 .color-aqua { color: #00EAFF; }
 .color-whisper { color: #EDEDED; }
 .color-pastel-green { color: #66D677; }
+.color-amaranth { color: #dc3545; }
 
 .background-color-swamp { background-color: #2A2B2B; }
 .background-color-dodger-blue { background-color: #0068FF; }
