--- a/themes/mc-server-theme-amp/layouts/partials/navigation/footer.html
+++ b/themes/mc-server-theme-amp/layouts/partials/navigation/footer.html
@@ -4,7 +4,7 @@
       <div class="margin-bottom-32">
         <amp-img
           alt="MC Server Logo"
-          src="/images/mc-server-logo.png"
+          src="/images/mc-server-logo.svg"
           width="189.33"
           height="64"
         >
