--- a/themes/mc-server-theme-amp/layouts/partials/navigation/navbar.html
+++ b/themes/mc-server-theme-amp/layouts/partials/navigation/navbar.html
@@ -3,7 +3,7 @@
     <div class="navbar-logo">
       <amp-img
         alt="MC Server Logo"
-        src="/images/mc-server-logo.png"
+        src="/images/mc-server-logo.svg"
         width="189.33"
         height="64"
       >
@@ -24,7 +24,7 @@
           <button class="snipcart-checkout snipcart-checkout-button display-flex align-items-center font-size-16 font-weight-semi-bold border-radius-4 padding-x-16 padding-y-16">
             <amp-img
               alt="MC Server Logo"
-              src="/images/shopping-cart.png"
+              src="/images/shopping-cart.svg"
               width="22.40"
               height="20"
             >
@@ -45,7 +45,7 @@
           <button class="snipcart-checkout snipcart-checkout-button display-flex align-items-center font-size-16 font-weight-semi-bold border-radius-4 padding-x-16 padding-y-16">
             <amp-img
               alt="MC Server Logo"
-              src="/images/shopping-cart.png"
+              src="/images/shopping-cart.svg"
               width="22.40"
               height="20"
             >
