--- a/themes/mc-server-theme-amp/layouts/partials/section/home-accessibility.html
+++ b/themes/mc-server-theme-amp/layouts/partials/section/home-accessibility.html
@@ -15,14 +15,23 @@
       {{ end }}
     </div>
     <div class="miliseconds">
-      <amp-img
-        alt="{{ .Params.home.accessible.image.alt }}"
-        src="{{ .Params.home.accessible.image.src }}"
-        width="{{ .Params.home.accessible.image.width }}"
-        height="{{ .Params.home.accessible.image.height }}"
-        layout="responsive"
+      <amp-bodymovin-animation
+      layout="responsive"
+      width="{{ .Params.home.accessible.image.width }}"
+      height="{{ .Params.home.accessible.image.height }}"
+      src="{{ .Params.home.accessible.animation.src }}"
+      alt="{{ .Params.home.accessible.animation.alt }}"
+      loop="true"
       >
-      </amp-img>
+        <amp-img placeholder
+            alt="{{ .Params.home.accessible.animation.alt }}"
+            src="{{ .Params.home.accessible.animation.src }}"
+            width="{{ .Params.home.accessible.animation.width }}"
+            height="{{ .Params.home.accessible.animation.height }}"
+            layout="responsive"
+          >
+        </amp-img>
+      </amp-bodymovin-animation>
         <div class="america-1 miliseconds-label">{{ .Params.home.accessible.location.america1 }}<span class="small">ms<span class="top"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-stopwatch" viewBox="0 0 16 16"> <path d="M8.5 5.6a.5.5 0 1 0-1 0v2.9h-3a.5.5 0 0 0 0 1H8a.5.5 0 0 0 .5-.5V5.6z"/> <path d="M6.5 1A.5.5 0 0 1 7 .5h2a.5.5 0 0 1 0 1v.57c1.36.196 2.594.78 3.584 1.64a.715.715 0 0 1 .012-.013l.354-.354-.354-.353a.5.5 0 0 1 .707-.708l1.414 1.415a.5.5 0 1 1-.707.707l-.353-.354-.354.354a.512.512 0 0 1-.013.012A7 7 0 1 1 7 2.071V1.5a.5.5 0 0 1-.5-.5zM8 3a6 6 0 1 0 .001 12A6 6 0 0 0 8 3z"/> </svg></span></span></div>
         <div class="america-2 miliseconds-label">{{ .Params.home.accessible.location.america2 }}<span class="small">ms<span class="top"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-stopwatch" viewBox="0 0 16 16"> <path d="M8.5 5.6a.5.5 0 1 0-1 0v2.9h-3a.5.5 0 0 0 0 1H8a.5.5 0 0 0 .5-.5V5.6z"/> <path d="M6.5 1A.5.5 0 0 1 7 .5h2a.5.5 0 0 1 0 1v.57c1.36.196 2.594.78 3.584 1.64a.715.715 0 0 1 .012-.013l.354-.354-.354-.353a.5.5 0 0 1 .707-.708l1.414 1.415a.5.5 0 1 1-.707.707l-.353-.354-.354.354a.512.512 0 0 1-.013.012A7 7 0 1 1 7 2.071V1.5a.5.5 0 0 1-.5-.5zM8 3a6 6 0 1 0 .001 12A6 6 0 0 0 8 3z"/> </svg></span></span></div>
         <div class="america-3 miliseconds-label">{{ .Params.home.accessible.location.america3 }}<span class="small">ms<span class="top"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-stopwatch" viewBox="0 0 16 16"> <path d="M8.5 5.6a.5.5 0 1 0-1 0v2.9h-3a.5.5 0 0 0 0 1H8a.5.5 0 0 0 .5-.5V5.6z"/> <path d="M6.5 1A.5.5 0 0 1 7 .5h2a.5.5 0 0 1 0 1v.57c1.36.196 2.594.78 3.584 1.64a.715.715 0 0 1 .012-.013l.354-.354-.354-.353a.5.5 0 0 1 .707-.708l1.414 1.415a.5.5 0 1 1-.707.707l-.353-.354-.354.354a.512.512 0 0 1-.013.012A7 7 0 1 1 7 2.071V1.5a.5.5 0 0 1-.5-.5zM8 3a6 6 0 1 0 .001 12A6 6 0 0 0 8 3z"/> </svg></span></span></div>
