--- a/themes/mc-server-theme-amp/layouts/partials/section/plans-premade-notes.html
+++ b/themes/mc-server-theme-amp/layouts/partials/section/plans-premade-notes.html
@@ -1,8 +1,9 @@
 <section class="section-table padding-y-64">
   <div class="container">
     <div class="row text-align-center color-whisper padding-bottom-32">
-      <p class="padding-y-8">*An individual Minecraft server's maximum RAM is limited to our availible node's capacity, which is currently 60GB.</p>
-      <p class="padding-y-8">*A Minecraft namespace’s storage and RAM is shared with other components, such as any SSH or Bungee services.</p>
+      <p class="padding-y-8">*Panel Access is in a public Alpha</p>
+      <p class="padding-y-8">*Due to demand and upgrades, new orders will be placed in our NA region. Server moves availible once EU is ready</p>
+      <p class="padding-y-8">*South-East Asia Region Coming Soon!</p>
       <p class="padding-y-8">*Backups are stored separately and are not counted towards your quota!</p>
     </div>
   </div>
