--- a/themes/mc-server-theme-amp/layouts/partials/section/plans-premade-table-general.html
+++ b/themes/mc-server-theme-amp/layouts/partials/section/plans-premade-table-general.html
@@ -1,6 +1,7 @@
 <section class="section-table padding-y-64">
   <div class="container">
-    <h2 class="font-size-24 font-weight-bold padding-bottom-32">MineCraft Plans</h2>
+    <h2 class="font-size-24 font-weight-bold padding-bottom-32">Model 2: Ryzen 3000-5000</h2>
+    <p class="font-size-18 font-weight-bold padding-bottom-16">Power Up Your Minecraft Adventure with Our Ryzen-Infused Servers</p>
     <div class="row padding-bottom-32 overflow-x-auto">
       <table>
         <thead class="font-weight-semi-bold background-color-licorice border-radius-8">
@@ -8,8 +9,6 @@
             <th class="text-align-left vertical-align-middle">Plans</th>
             <th class="text-align-left vertical-align-middle">RAM</th>
             <th class="text-align-left vertical-align-middle">Storage</th>
-            <th class="text-align-left vertical-align-middle">Server Quota</th>
-            <th class="text-align-left vertical-align-middle">Bungee Quota</th>
             <th class="text-align-left vertical-align-middle">Price</th>
             <th class="text-align-center vertical-align-middle">Buy</th>
           </tr>
