--- a/themes/mc-server-theme-amp/layouts/partials/section/plans-premade-what-you-get.html
+++ b/themes/mc-server-theme-amp/layouts/partials/section/plans-premade-what-you-get.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row padding-bottom-32">
       <h1 class="font-size-40 font-weight-bold text-align-center">
-        What you get with your purchase:
+        {{ .Params.content.whatYouGet.title }}
       </h1>
     </div>
     <div class="row justify-content-space-around">
