--- a/themes/mc-server-theme-amp/layouts/partials/structure/head.html
+++ b/themes/mc-server-theme-amp/layouts/partials/structure/head.html
@@ -39,6 +39,7 @@
       <link rel="preconnect" href="https://cdn.snipcart.com">
       <link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.2.1/default/snipcart.css" />
     {{ end }}
+    <meta name="amp-script-src" content="sha384-xmxQasq82hOaOb1lFvTFXNWfVhlQ7D6-HEnLxkwhl_4bZXOExdJELoe2WcNVm3u8">
 </head>
 
 <body>
